--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ background-size: cover;
     box-shadow: 0 0.0.5rem 0.1rem rgb(6, 6, 6);
     width: 100%;
     background-image: linear-gradient(180deg, rgb(22, 15, 15), rgb(13, 13, 15), rgb(0, 0, 0));
-    z-index: +1;
+    z-index: +2;
 
 }
 
@@ -336,6 +336,62 @@ a {
         font-size: 20px;
     }
 }
+
+.container-ball {
+    width: 500px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    filter: url(#gooey);
+    z-index: +1;
+    padding-left: 200px;
+    left: 800px;
+    bottom: 150px;
+    
+
+}
+
+.ball {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: red;
+    position: absolute;
+}
+
+.ball-1 {
+    top: 50%;
+    left: 20%;
+    animation: ball-1 2s ease infinite alternate;
+}
+
+.ball-2 {
+    top: 50%;
+    left: 60%;
+    animation: ball-2 2s ease infinite alternate;
+}
+
+
+@keyframes ball-1 {
+    from {
+        left: 20%;
+    }
+
+    to {
+        left: 60%;
+    }
+}
+@keyframes ball-2 {
+    from {
+        left: 60%;
+    }
+
+    to {
+        left: 30%;
+    }
+} 
 
 
 /* @media (max-width: 880px) {
