--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .background {
-background-image: linear-gradient(180deg, rgb(22, 15, 15), rgb(13, 13, 15), rgb(0, 0, 0));
+background-image: linear-gradient(180deg, rgb(12, 12, 12), rgb(13, 13, 16), rgb(0, 0, 0));
 height: 100vh;
 width: 100%;
 background-size: cover;
@@ -15,7 +15,7 @@ background-size: cover;
 .navigation {
     box-shadow: 0 0.0.5rem 0.1rem rgb(6, 6, 6);
     width: 100%;
-    background-image: linear-gradient(180deg, rgb(22, 15, 15), rgb(13, 13, 15), rgb(0, 0, 0));
+    background-image: linear-gradient(180deg, rgb(12, 12, 12), rgb(13, 13, 15), rgb(0, 0, 0));
     z-index: +2;
 
 }
@@ -53,7 +53,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: rgb(252, 0, 0);
+    color:lime;
     transform: scale(1.2);
     text-shadow: 0 0 8px;
     transition: all 0.5s;
@@ -61,7 +61,7 @@ nav ul li a:hover {
 
 span {
     text-shadow: 0 0 12px;
-    color: rgb(0, 252, 21);
+    color: lime;
 }
 
 a {
@@ -173,12 +173,12 @@ a {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: red;
+    background: rgb(20, 19, 19);
     border-radius: 5px;
 }
 
 .container-projetos {
-    background-image: linear-gradient(180deg, rgb(0, 0, 0), rgb(13, 13, 15), rgb(22, 15, 15));
+    background-image: linear-gradient(180deg, rgb(0, 0, 0), rgb(13, 13, 15), rgb(1git2, 12, 12));
     width: 100%;
     padding: 100px 0px;
 }
@@ -225,7 +225,7 @@ a {
 }
 
 .card h5:hover {
-    color: rgb(252, 0, 0);
+    color: lime;
     transform: scale(1.1);
     text-shadow: 0 0 8px;
     transition: all 0.5s;
@@ -357,7 +357,7 @@ a {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background-color: red;
+    background-color:lime;
     position: absolute;
 }
 
