--- a/style.css
+++ b/style.css
@@ -20,6 +20,13 @@ background-size: cover;
 
 }
 
+#sessão3 {
+    background-image: linear-gradient(180deg, rgb(0, 0, 0), rgb(13, 13, 15), rgb(12, 12, 12));
+height: 100vh;
+width: 100%;
+background-size: cover;
+}
+
 nav {
     display: flex;
     align-items: center;
